inicio da tela de login e cadastro

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,13 +1,46 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
+
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Org2Workout</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#0cb94e',
+            'background-light': '#f6f8f7',
+            'background-dark': '#102217',
+          },
+          fontFamily: {
+            display: ['Lexend'],
+          },
+          borderRadius: {
+            DEFAULT: '0.25rem',
+            xl: '0.75rem',
+            full: '9999px',
+          },
+        },
+      },
+    }
+  </script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
