--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" class="dark">
-
+<base href="/" />
 <head>
   <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
